perf: remove unused gas fees data requests (#1022)
