# node/coinstacks/base/api/src/swagger.json
@@ -489,13 +489,7 @@
 			"BaseGasFees": {
 				"description": "Contains info about current recommended fees for a transaction on both L1 and L2",
 				"properties": {
-					"gasPrice": {
-						"type": "string"
-					},
 					"baseFeePerGas": {
-						"type": "string"
-					},
-					"maxPriorityFeePerGas": {
 						"type": "string"
 					},
 					"slow": {
@@ -512,7 +506,6 @@
 					}
 				},
 				"required": [
-					"gasPrice",
 					"slow",
 					"average",
 					"fast",
@@ -1181,9 +1174,7 @@
 									"Example 1": {
 										"value": {
 											"l1GasPrice": "5349789102",
-											"gasPrice": "52518432",
 											"baseFeePerGas": "51497198",
-											"maxPriorityFeePerGas": "1000000",
 											"slow": {
 												"gasPrice": "51815704",
 												"maxFeePerGas": "51947082",
