# node/coinstacks/common/api/src/evm/service.ts
@@ -304,24 +304,11 @@ export class Service implements Omit<BaseAPI, 'getInfo'>, API {
 
   async getGasFees(): Promise<GasFees> {
     try {
-      // fetch legacy gas price estimate from the node
-      const gasPrice = (await this.provider.send('eth_gasPrice', [])) as string
-
-      const { baseFeePerGas, maxPriorityFeePerGas } = await (async () => {
-        const baseFeePerGas = this.gasOracle.getBaseFeePerGas()
-        if (!baseFeePerGas) return {}
-
-        // fetch maxPriorityFeePerGas estimate from the node
-        const maxPriorityFeePerGas = (await this.provider.send('eth_maxPriorityFeePerGas', [])) as string
-        return { baseFeePerGas, maxPriorityFeePerGas: Number(maxPriorityFeePerGas).toString() }
-      })()
-
+      const baseFeePerGas = this.gasOracle.getBaseFeePerGas()
       const estimatedFees = await this.gasOracle.estimateFees([1, 60, 90])
 
       return {
-        gasPrice: Number(gasPrice).toString(),
         baseFeePerGas,
-        maxPriorityFeePerGas,
         slow: estimatedFees['1'],
         average: estimatedFees['60'],
         fast: estimatedFees['90'],
